--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
-    "dev": "server.js"
+    "start": "nodemon server/server.js",
+    "dev": "node server/server.js"
   },
   "keywords": [],
   "author": "",
